--- a/ClassSchedulingProject/ClassSchedulingProject.csproj
+++ b/ClassSchedulingProject/ClassSchedulingProject.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Azure.Core" Version="1.25.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="4.0.20505" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
