using react, changes to ui

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,50 @@
 
 *.json
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_14.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_15.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_16.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_17.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_18.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_19.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_20.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_21.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_22.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_23.publish.sql
+ClassSchedulingProject/.vs/ClassSchedulingProject/DesignTimeBuild/.dtbcache.v2
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/15c169e1-11f6-4d9a-8a7c-f9dfd8547f4d.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/26d390b8-632b-4227-8b4c-d28c795ee49f.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/33b4c474-2760-4bc9-aed8-9f422a7aac52.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/5d96738e-2a9e-47d4-b9f6-e92c3ae2209b.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/66748203-e9b3-4b8e-a4fe-ca74a1a6bcef.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/cf2eaeb8-1605-4b75-9bf2-69847fdfa038.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/d455102e-2494-4b27-a2d7-f4eef6166b53.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/fc93ef48-bf49-42cd-aa77-e007f9d98a6b.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.futdcache.v1
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.suo
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.metadata.v2
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.projects.v2
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
