changes to how events are created.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,55 @@ ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_24.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_25.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_26.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_27.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_28.publish.sql
+ClassSchedulingDBData/bin/Debug/ClassSchedulingDBData_29.publish.sql
+ClassSchedulingDBData/bin/Debug/DeploymentReport_14.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_15.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_16.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_17.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_18.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_19.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_20.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_21.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_22.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_23.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_24.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_25.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_26.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_27.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_28.txt
+ClassSchedulingDBData/bin/Debug/DeploymentReport_29.txt
+ClassSchedulingProject/.vs/ClassSchedulingProject/DesignTimeBuild/.dtbcache.v2
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/73d659b7-6587-4445-9c2c-a05e4a2c05d1.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/925fcb72-3e77-48f7-ae59-16a8d8c812d7.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/FileContentIndex/a1549ad6-489c-40b4-b203-3e3e48027c84.vsidx
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.futdcache.v1
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.suo
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.metadata.v2
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.projects.v2
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/.vs/ClassSchedulingProject/DesignTimeBuild/.dtbcache.v2
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.futdcache.v1
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.suo
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.metadata.v2
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.projects.v2
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+*.dbmdl
+*.jfm
