--- a/ClassSchedulingProject/ClassSchedulingProject.csproj
+++ b/ClassSchedulingProject/ClassSchedulingProject.csproj
@@ -17,4 +17,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\DbModels\" />
+    <Folder Include="Models\LoginHandlers\" />
+  </ItemGroup>
+
 </Project>
