--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,40 @@ ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
 *.dbmdl
 *.jfm
+ClassSchedulingDBData/ClassSchedulingDBData.dbmdl
+ClassSchedulingDBData/ClassSchedulingDBData.jfm
+ClassSchedulingProject/.vs/ClassSchedulingProject/DesignTimeBuild/.dtbcache.v2
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.futdcache.v1
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.suo
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.metadata.v2
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.projects.v2
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+ClassSchedulingDBData/ClassSchedulingDBData.dbmdl
+ClassSchedulingDBData/ClassSchedulingDBData.jfm
+ClassSchedulingProject/.vs/ClassSchedulingProject/DesignTimeBuild/.dtbcache.v2
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.futdcache.v1
+ClassSchedulingProject/.vs/ClassSchedulingProject/v17/.suo
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.metadata.v2
+ClassSchedulingProject/.vs/ProjectEvaluation/classschedulingproject.projects.v2
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+*.dbmdl
