support for multiple programs on the same calendar. non programs will be greyed out

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,32 @@ ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.c
 ClassSchedulingProject/obj/ClassSchedulingProject.csproj.nuget.dgspec.json
 ClassSchedulingProject/obj/ClassSchedulingProject.csproj.nuget.g.props
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.assets.cache
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.assets.cache
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.csproj.AssemblyReference.cache
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.csproj.CoreCompileInputs.cache
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.csproj.FileListAbsolute.txt
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PublishOutputs.04885ae7b2.txt
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/ClassSchedulingProject.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/ClassSchedulingProject.pdb
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/Microsoft.AspNetCore.JsonPatch.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/Microsoft.AspNetCore.Mvc.NewtonsoftJson.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/Newtonsoft.Json.Bson.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/Newtonsoft.Json.dll
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/css/calendarAppDefaults.css
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/app.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/appHelpers.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/calendar.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/Components.jsx
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/createDraggableElement.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/main.jsx
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/js/popUpRenderer.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/lib/react/babel7189.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/lib/react/reactDev.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/PubTmp/Out/wwwroot/lib/react/reactDomDev.js
+ClassSchedulingProject/obj/Release/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
