--- a/.gitignore
+++ b/.gitignore
@@ -617,3 +617,4 @@ ClassSchedulingProject/obj/Debug/netcoreapp3.1/apphost.exe
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.assets.cache
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
 ClassSchedulingProjectElectron/root/css/calendarAppDefaults.css
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.exe
