--- a/.gitignore
+++ b/.gitignore
@@ -618,3 +618,9 @@ ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.assets.cac
 ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
 ClassSchedulingProjectElectron/root/css/calendarAppDefaults.css
 ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.exe
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/Razor/Views/Home/Index.cshtml.g.cs
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/project.razor.json
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/obj/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.pdb
+ClassSchedulingProject/bin/Debug/netcoreapp3.1/ClassSchedulingProject.Views.dll
