minor changes to status bar

--- a/ClassSchedulingProject/appsettings.json
+++ b/ClassSchedulingProject/appsettings.json
@@ -9,5 +9,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ClassSchedulerAPIData": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=ClassSchedulerAPIData;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:5001"
+      }
+    }
   }
 }
